# docs/swagger.json
@@ -1,22 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "A simple RESTful API for managing a phone book.",
-        "title": "Phone Book API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
-        "version": "1.0"
+        "contact": {}
     },
-    "host": "localhost:8080",
-    "basePath": "/",
     "paths": {
         "/contacts": {
             "get": {
@@ -153,8 +139,14 @@
                 "cityId": {
                     "type": "integer"
                 },
+                "cityName": {
+                    "type": "string"
+                },
                 "countryId": {
                     "type": "integer"
+                },
+                "countryName": {
+                    "type": "string"
                 },
                 "postalCode": {
                     "type": "string"
